--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -40,7 +40,7 @@ video {
 
 @media (pointer: coarse) and (hover: none) {
   body {
-    background: url('./img/img_bg_1.jpg') #002E66 no-repeat center center scroll;
+    /*background: url('./img/img_bg_1.jpg') #002E66 no-repeat center center scroll;*/
     background-size: cover;
   }
   body video {
