--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -12,7 +12,7 @@ body {
   height: 100%;
   min-height: 35rem;
   position: relative;
-  font-family: 'Source Sans Pro';
+ font-family: 'Baloo Chettan 2', cursive;
   font-weight: 300;
 }
 
