--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -6,14 +6,20 @@
 
 html {
   height: 100%;
+   background: url('./img/img_bg_1.jpg');
+ 
 }
 
 body {
   height: 100%;
   min-height: 35rem;
   position: relative;
- font-family: 'Baloo Chettan 2', cursive;
+ font-family: 'Comfortaa', cursive;
   font-weight: 300;
+
+  
+
+   
 }
 
 h1,
@@ -22,7 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Merriweather';
+font-family: 'Comfortaa', cursive;
   font-weight: 700;
 }
 
@@ -30,7 +36,7 @@ h6 {
 
 @media (pointer: coarse) and (hover: none) {
   body {
-    background: url('./img/img_bg_1.jpg') #f5be0196 no-repeat center center scroll;
+    background: url('./img/img_bg_1.jpg') #f6ba00 no-repeat center center scroll;
     background-size: cover;
   }
   body video {
