--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -71,7 +71,7 @@ font-family: 'Comfortaa', cursive;
   width: 100%;
   min-height: 35rem;
   height: 100%;
-  background-color: #f5be01;
+  background-color: #FCC52A;
   transform: skewY(4deg);
   transform-origin: bottom right;
    
